@startuml
!theme spacelab
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as u {
  *id : number <<generated>>
  --
  *email : text
  *password : text
  *username : text
  *image : text
  *birthday : datetime
  *biography: text
  *position : text
  *is_private : bool
  *badge_id : number <<FK>>
}

entity "User_post_participation" as upp {
  *id : number <<generated>>
  --
  *post_id : number <<FK>>
  *participant_id : number <<FK>>
  *is_completed : bool
}

entity "User_point_category" as upc {
  *id : number <<generated>>
  --
  *user_id : number user_id <<FK>>
  *category_id : number user_id <<FK>>
  *current_point : number
  *total_point : number
}

entity "Subscription" as s {
  *id : number <<generated>>
  --
  *follower_id : number <<FK>>
  *following_id : number <<FK>>
  *statut : enum (approved, pending, denied)
}

entity "Category" as cat {
  *id : number <<generated>>
  --
  *title: text
  *image : text
}

entity "Post" as p {
  *id : number <<generated>>
  --
  *category_id : number <<FK>>
  *author_id : number <<FK>>
  *title: text
  *description : text
  *image : text
  *position : text
  *type : enum (challenge, action)
  *level : enum (easy, medium, hard)
  *start_date : datetime
  *end_date : datetime
}

entity "Comment" as c {
  *id : number <<generated>>
  --
  *author_id : number <<FK>>
  *post_id : number <<FK>>
  *content : text
}

entity "Reward" as r {
  *id : number <<generated>>
  --
  *title : text
  *image : text
  *type : enum (badge, trophy)
  *point : number
}

entity "Notification" as not {
  *id : number <<generated>>
  --
  *title : text
  *content : text
}

entity "User_notification" as un {
  *user_id : number <<FK>>
  *notification_id : number <<FK>>
}

Entity "User_trophy" as ut {
  *id : number <<generated>>
  --
  *user_id : number <<FK>>
  *category_id : number <<FK>>
}

Entity "Post_like" as pl {
  *post_id : number <<FK>>
  *user_id : number <<FK>>
}

Entity "Post_tag" as ptag {
  *post_id : number <<FK>>
  *tag_id : number <<FK>>
}

Entity "Tag" as tag {
  *id : number <<generated>>
  *label : text
}


u |o-down--o{ upp : participates
p }o---o| upp : contains
u }o-down--|| p : writes
u }o-down--|| pl : likes
p }o-right--|| pl : has
u }o---|| c : writes
u ||---o{ r : has a badge
u |o-up--o| s : asks to follow
u }o--down--|| un : is notified
un ||--up--|{ not : is notified
p }o-right--|| c : commented
p ||---o{ cat : is categorized
u }o--|| upc : has points in
u }o--|| ut : has 
cat }|--|| ut : has 
cat }o--|| upc : has 
ptag ||---|| tag
ptag ||--o| p

@enduml